# harvestor

./: .env.template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  example.py  pyproject.toml  pytest.ini  test_all_input_types.py  test_image_invoice.py  test_simple.py
.github/workflows/: publish.yml  python-tests.yml  test.yml
src/harvestor/: __init__.py  config.py
src/harvestor/cli/: main.py
src/harvestor/core/: cost_tracker.py  harvester.py  harvestor.py
src/harvestor/parsers/: llm_parser.py
src/harvestor/privacy/: __init__.py  redactor.py
src/harvestor/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
src/harvestor/schemas/: __init__.py  base.py
src/harvestor/storage/: base.py
src/harvestor/validators/: __init__.py  base.py  engine.py
src/harvestor/validators/rules/: __init__.py  anomaly_rules.py  business_rules.py  format_rules.py  math_rules.py
tests/: README.md  __init__.py  conftest.py  test_cost_tracker.py  test_harvester.py  test_harvestor.py  test_input_types.py  test_privacy.py  test_validators.py
