[project]
name = "harvestor"
version = "0.1.0"
description = "Harvest intelligence from any document - AI-powered data extraction"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}

dependencies = [
    # Core LLM
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.0.5",
    "anthropic>=0.18.0",
    "openai>=1.10.0",

    # Document Processing
    "PyMuPDF>=1.23.0",
    "pdfplumber>=0.10.0",
    "Pillow>=10.2.0",

    # OCR
    "pytesseract>=0.3.10",
    "opencv-python-headless>=4.8.0",

    # Data & Validation
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",

    # Storage
    "sqlalchemy>=2.0.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
]

[project.scripts]
harvestor = "harvestor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
